<resources>
    <string name="app_name">Simple Math Calculator</string>
    <string name="txtNum1">1</string>
    <string name="txtNum2">2</string>
    <string name="txtNum3">3</string>
    <string name="txtNum4">4</string>
    <string name="txtNum5">5</string>
    <string name="txtNum6">6</string>
    <string name="txtNum7">7</string>
    <string name="txtNum8">8</string>
    <string name="txtNum9">9</string>
    <string name="txtNum0">0</string>
    <string name="txtClear">C</string>
    <string name="txtEqual">=</string>
    <string name="txtMultiply">x</string>
    <string name="txtPlus">+</string>
    <string name="txtMinus">-</string>
    <string name="txtDivided">÷</string>
    <string name="txtPosNeg">+/-</string>
    <string name="txtDecimal">.</string>
    <string name="txtBkSpc"><![CDATA[<]]></string>
    <string name="txtTest">Testing Text</string>
</resources>
