<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nscc_appd200.simplemathcalc.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/display_margin"
        android:paddingLeft="@dimen/display_margin"
        android:paddingRight="@dimen/display_margin"
        android:paddingTop="@dimen/display_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="75sp">

            <TextView
                android:id="@+id/Display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_span="4"
                android:text="Test TEXT"
                android:textAlignment="textEnd"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:text="@string/txtNum7"
                android:textSize="@dimen/txtSize" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum8"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum9"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btnDivided"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDivided"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum4"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum5"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum6"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMultiply"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum1"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height"  />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum2"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum3"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtMinus"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:text="@string/txtDecimal"
                android:textSize="@dimen/txtSize" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNum0"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btnPosNeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPosNeg"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPlus"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/txtClear"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/txtEqual"
                android:textSize="@dimen/txtSize"
                android:height="@dimen/button_height" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
